[project]
name = "deep-thinking"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.11.2",
    "comet-ml>=3.57.3",
    "easy-to-hard-data>=0.1.7",
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "svglib>=1.6.0",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-wit>=1.8.1",
    "torch>=2.9.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
